--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "league/oauth2-client": "^2.0"
+    "league/oauth2-client": "^1.4"
   },
   "autoload": {
     "psr-4": {
-      "NeilCrookes\\OAuth2\\Client\\": "src/"
+      "Sukerman\\OAuth2\\Client\\": "src/"
     }
   }
 }
